# FAVOR

./: main.py  pyproject.toml
