[tool.poetry]
name = "tdfhgfdswedsa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
aiofiles = "^0.6.0"
aiohttp = "^3.7.4"
flask = "^1.1.2"
lxml = "^4.6.3"
0html = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
